# cdktf-demo

./: .cspell.json  .envrc  .gitignore  .markdownlint.json  CLAUDE.md  README.md  flake.nix  plan.md  tasks.md  tasks.txt
.github/workflows/: _infra-shared-cdktf-tier.yml  _shared-cdktf-tier.yml  app-build.yml  app-release.yml  deploy-all.yml  infra-deploy-all.yml  infra-tier-01-environments.yml  infra-tier-02-clusters.yml  infra-tier-03-internal-tools.yml  infra-tier-04-applications.yml  tier-01-environments.yml  tier-02-clusters.yml  tier-03-internal-tools.yml  tier-04-applications.yml
app/: Cargo.toml  docker-compose.yml
app/helm/rust-demo/: Chart.yaml  values.yaml
app/helm/rust-demo/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
app/src/: main.rs
docs/: demo.md
minikube/: README.md  start.sh
scripts/: bootstrap-github-oidc.sh  bootstrap-secrets.sh  bootstrap-tf-backend.sh  deploy-all.sh  destroy-all.sh  dev-build-multi.sh  dev-down.sh  dev-pull.sh  dev-up.sh  refresh-lbc-policy.sh  set-aws-profile.sh  smoke-test.sh  validate-architecture.sh
tier-01-cdktf-environments/: cdktf.json  environments.jsonc  package-lock.json  package.json
tier-02-cdktf-clusters/: cdktf.json  environments.jsonc  package-lock.json  package.json
tier-03-cdktf-internal-tools/: cdktf.json  environments.jsonc  package-lock.json  package.json  terraform.devnet.tfvars.json  tsconfig.infra.json  tsconfig.json
tier-04-cdktf-applications/: cdktf.json  environments.jsonc  package-lock.json  package.json  terraform.devnet.tfvars.json
(+50 files in other folders)
