[package]
name = "rust-demo"
version = "0.1.6"
edition = "2021"
description = "Tiny axum service used to demo cdktf-demo deploys"
license = "MIT"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
